# clc

./: .gitignore  MANIFEST  README.md  clc.py  st.sh
cpp/src/: SConscript  clc.cpp  config.cpp  config.hpp
go/: build.sh  buildwin.sh  clc.go  config.go  consts.go  display.go  files.go  go.mod  go.sum  highlight.go  highlight_windows.go  process.go  util.go
rs/: Cargo.toml  README.md  deploy.sh
rs/src/: cli.rs  config.rs  consts.rs  display.rs  main.rs  types.rs  util.rs  valid.rs
vala/: MANIFEST  clc.vala
