[package]
name = "clc"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
opt-level = 3 # 3 is fastest binary; use "s" for smallest
lto = true

[dependencies]
anyhow = "^1"
memmap2 = "^0.5"
num-format = { version = "0.4.3", features = ["with-system-locale"] }
rayon = "^1.5"
state = "^0.5"
term_size = "^0.3"
walkdir = "^2.3"

[dependencies.clap]
version = "^4"
features = [ "derive", "wrap_help",]
