[package]
name = "clc"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "^1"
memmap2 = "^0.5"
rayon = "^1.5"
state = "^0.5"
term_size = "^0.3"
walkdir = "^2.3"

[profile.release]
strip = true
opt-level = 3
lto = true

[dependencies.num-format]
version = "0.4.3"
features = [ "with-system-locale",]

[dependencies.clap]
version = "^4"
features = [ "derive", "wrap_help",]
