[[bin]]
name = "clc"
path = "src/main.rs"

[package]
name = "qtrac-clc"
version = "1.0.1"
edition = "2021"
publish = true
authors = [ "Mark Summerfield <mark@qtrac.eu>",]
include = [ "Cargo.toml", "src/**/*.rs",]
description = "clc (code line count) quickly counts newlines in code files"
documentation = "https://docs.rs/clc/latest/clc/"
homepage = "https://github.com/mark-summerfield/clc"
repository = "https://github.com/mark-summerfield/clc"
readme = "README.md"
keywords = [ "statistics", "utility", "cli", "lines", "cloc",]
categories = [ "development-tools", "text-processing",]
license = "GPL-3.0"

[dependencies]
anyhow = "^1"
memmap2 = "^0.5"
rayon = "^1.5"
state = "^0.5"
term_size = "^0.3"
walkdir = "^2.3"

[dependencies.num-format]
version = "0.4.3"
features = [ "with-system-locale",]

[dependencies.clap]
version = "^4"
features = [ "derive", "wrap_help",]

[profile.release]
strip = true
opt-level = 3
lto = true
